test/src/e2e_vm_tests/test_programs/should_fail/type_alias_lib_shadowing/src/lib.sw
library;

#[allow(dead_code)]
pub type MyType = u64;
